[project]
name = "406-ch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "jinja2>=3.1.4",
    "markdown>=3.7",
    "minify-html>=0.15.0",
    "pygments>=2.18.0",
    "rcssmin>=1.1.2",
]

[tool.ruff]
lint.extend-select = ["B", "E", "F", "W", "C90", "I", "UP", "FBT", "C4", "DJ", "PIE", "INT", "SIM", "YTT", "G"]
lint.extend-ignore = [
  # No line length errors
  "E501",
  # Named lambdas are good for line golfing
  "E731",
]
fix = true
target-version = "py310"

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.coverage.run]
branch = true
omit = [
    "*migrate*",
    "*migrations*",
    "*venv*",
]

[tool.coverage.report]
skip_covered = true
show_missing = true
